Altered the moves so that only one move can be done per turn

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "                    self.prevMove = (new_x,new_y)\n",
     "                elif (self.numMoves == 0) : # moving flag. since it's not a piece, if it passed the earlier checks, it must be the flag\n",
     "                    self.flag = (new_x,new_y) # will only ever enter this condition if the player can select the flag piece, aka, the player owns the gold pieces\n",
-    "                    self.numMoves += 1\n",
+    "                    self.numMoves += 2\n",
     "                    if new_x == 0 or new_x == 6 or new_y == 0 or new_y == 6 :\n",
     "                        self.gameState = 1 #flag piece reached the border, gold won\n",
     "                else :\n",
@@ -108,9 +108,9 @@
     "            self.board[new_x][new_y] = self.board[old_x][old_y] # if no errors were raised, change the position\n",
     "            self.board[old_x][old_y] = 0\n",
     "            \n",
-    "            self.numMoves += 1\n",
+    "            self.numMoves += 2\n",
     "            \n",
-    "            if self.numMoves == 2 :\n",
+    "            if self.numMoves >= 2 :\n",
     "                self.numMoves = 0 # reset move counter\n",
     "                self.prevMove = None\n",
     "                self.toMove *= -1 # after moving twice or moving the flag, give the turn to the other player\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,13 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Movement Error: Invalid Piece to Move\n",
       "Movement Error: Invalid Piece to Move\n",
       "Movement Error: Invalid Piece to Move\n",
       "Movement Error: Invalid Movement. There are other pieces impeding this movement\n",
