finished method to calculate heuristics based on weights and player

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,16 +154,45 @@
     "                \n",
     "            self.toMove *= -1 # after capturing, give the turn to the other player\n",
     "            \n",
-    "    def evaluate_board(self, player) : # evaluates the board and returns the heuristic for the current player\n",
+    "    def evaluate_board(self, player, missing_pieces, count_capturable, count_defended, flag_defense, flag_open_to_edge) : # evaluates the board and returns the heuristic for the current player\n",
+    "        # the variables are the weights of each heuristic, 0 if heuristic is disabled\n",
     "        heuristic = 0\n",
     "        \n",
     "        if player == 1 : # gold pieces\n",
     "            if self.gameState == 1 :\n",
     "                return np.inf # infinity if it's a winning game state\n",
+    "            elif self.gameState == -1 :\n",
+    "                return np.NINF\n",
+    "            \n",
+    "            if missing_pieces != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.count_pieces_missing(-1) * missing_pieces # count the number of missing silver pieces\n",
+    "            if count_capturable != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.count_capturable(1) * count_capturable # count the number of pieces gold can capture\n",
+    "            if count_defended != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.count_defended(1) * count_defended # count the number of gold pieces that are defended\n",
+    "            if flag_defense != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.flag_defense() * flag_defense # how many gold pieces are defending the flag\n",
+    "            if flag_open_to_edge != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.flag_open_to_edge() * flag_open_to_edge # how many edges are visible to the flag\n",
     "            \n",
     "        else : # silver pieces\n",
     "            if self.gameState == -1 :\n",
     "                return np.inf # infinity if it's a winning game state\n",
+    "            elif self.gameState == 1 :\n",
+    "                return np.NINF\n",
+    "            \n",
+    "            if missing_pieces != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.count_pieces_missing(1) * missing_pieces # count the number of missing gold pieces\n",
+    "            if count_capturable != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.count_capturable(-1) * count_capturable # count the number of pieces silver can capture\n",
+    "            if count_defended != 0 : # heuristic isn't disabled\n",
+    "                heuristic += self.count_defended(-1) * count_defended # count the number of silver pieces that are defended\n",
+    "            if flag_defense != 0 : # heuristic isn't disabled\n",
+    "                heuristic -= self.flag_defense() * flag_defense # how many gold pieces are defending the flag (negative)\n",
+    "            if flag_open_to_edge != 0 : # heuristic isn't disabled\n",
+    "                heuristic -= self.flag_open_to_edge() * flag_open_to_edge # how many edges are visible to the flag (negative)\n",
+    "                \n",
+    "        return heuristic\n",
     "            \n",
     "    def count_pieces_missing(self,player) : # how many pieces have been captured from a player\n",
     "        if player == 1 : # gold pieces\n",
