changed some things to make use of the copy library

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import copy as cp\n",
+    "\n",
     "\n",
     "class MoveError(Exception):\n",
     "    pass\n",
@@ -354,7 +356,7 @@
     "\n",
     "    def generate_all_moves(self, player):\n",
     "        possible_moves = []\n",
-    "        pieces = self.goldPieces if player == 1 else self.silverPieces\n",
+    "        pieces = cp.copy(self.goldPieces).append(self.flag) if player == 1 else self.silverPieces\n",
     "        \n",
     "        for piece in pieces:\n",
     "            for move in self.possible_moves_for_piece(piece):\n",
@@ -366,15 +368,7 @@
     "        return possible_moves\n",
     "\n",
     "    def copy_and_apply_move(self, move):\n",
-    "        new_game_state = Game(self.toMove)\n",
-    "        new_game_state.board = np.copy(self.board)\n",
-    "        new_game_state.goldPieces = self.goldPieces.copy()\n",
-    "        new_game_state.silverPieces = self.silverPieces.copy()\n",
-    "        new_game_state.flag = self.flag\n",
-    "        new_game_state.toMove = self.toMove\n",
-    "        new_game_state.numMoves = self.numMoves\n",
-    "        new_game_state.gameState = self.gameState\n",
-    "        new_game_state.prevMove = self.prevMove\n",
+    "        new_game_state = cp.deepcopy(self)\n",
     "\n",
     "        originalPos, nextPos = move\n",
     "        new_game_state.move(originalPos, nextPos)\n",
@@ -1758,7 +1752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
