fixed bugs, forced screen update before minimax runs, added thread to print how many returns from the recursive function every 2 secs

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +388,8 @@
     "            self.buttons[self.selected_piece[0]][self.selected_piece[1]].config(relief=tk.RAISED, bd=1, highlightbackground=\"grey\") # remove the red border from the previously selected button\n",
     "            self.selected_piece = None # dereference selected piece\n",
     "            \n",
+    "            self.update() # forces the screen to be updated before moving on\n",
+    "            \n",
     "            if self.game.toMove == self.aiPlayer:  # Check if it's AI's turn first\n",
     "                self.computer_move()\n",
     "                \n",
@@ -410,7 +412,7 @@
     "\n",
     "        self.master.destroy() # close the game\n",
     "        \n",
-    "    def minimax(self, game, depth, maximizingPlayer):\n",
+    "    def minimax(self, game, depth, alpha, beta, maximizingPlayer): # TODO: It can happen where errors are thrown when there are no possible moves\n",
     "        if depth == 0 or game.gameState != 0:\n",
     "            self.states_explored += 1\n",
     "            return game.evaluate_board(self.aiPlayer, self.heuristic_weights), None\n",
@@ -424,11 +426,17 @@
     "\n",
     "            for move in possibleMoves:\n",
     "                child = game.copy_and_apply_move(move)\n",
-    "                evaluation, _ = self.minimax(child, depth - 1, False)\n",
+    "                evaluation, _ = self.minimax(child, depth - 1, alpha, beta, False)\n",
     "\n",
     "                if evaluation > maxEvaluation:\n",
     "                    maxEvaluation = evaluation\n",
     "                    bestMove = move\n",
+    "                        \n",
+    "                alpha = max(alpha, evaluation)\n",
+    "                \n",
+    "                if beta <= alpha :\n",
+    "                    break\n",
+    "                \n",
     "            self.states_explored += 1\n",
     "            return maxEvaluation, bestMove  # Return the best move and its evaluation at the root level\n",
     "\n",
@@ -441,22 +449,30 @@
     "\n",
     "            for move in possibleMoves:\n",
     "                child = game.copy_and_apply_move(move)\n",
-    "                evaluation, _ = self.minimax(child, depth - 1, True)\n",
+    "                evaluation, _ = self.minimax(child, depth - 1, alpha, beta, True)\n",
     "\n",
     "                if evaluation < minEvaluation:\n",
     "                    minEvaluation = evaluation\n",
     "                    bestMove = move\n",
+    "                    \n",
+    "                beta = min(beta, evaluation)\n",
+    "                \n",
+    "                if beta <= alpha :\n",
+    "                    break\n",
     "            self.states_explored += 1\n",
     "            return  minEvaluation, bestMove  # Return the best move and its evaluation at the root level\n",
     "        \n",
     "    def computer_move(self):\n",
+    "        self.stop_thread_event.clear()\n",
     "        thread = threading.Thread(target=self.print_states_explored)\n",
     "        thread.start()\n",
     "\n",
     "        try:\n",
-    "            _, bestMove = self.minimax(self.game, 3, True)\n",
+    "            _, bestMove = self.minimax(self.game, np.inf, np.NINF, np.inf, True)\n",
     "            piece, move = bestMove\n",
     "            self.game.move(piece, move)\n",
+    "            print(f\"States Explored: {self.states_explored}\\n\")\n",
+    "            print(\"================================================================\\n\")\n",
     "            self.states_explored = 0\n",
     "        except MoveError as e:\n",
     "            print(f\"AI Move Error: {e}\")\n",
@@ -466,13 +482,13 @@
     "\n",
     "    def print_states_explored(self):\n",
     "        while not self.stop_thread_event.is_set():\n",
-    "            print(f\"States Explored: {self.states_explored}\")\n",
+    "            print(f\"States Explored: {self.states_explored}\\n\")\n",
     "            time.sleep(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -543,24 +559,13 @@
      "output_type": "stream",
      "text": [
       "States Explored: 0\n",
-      "Movement Error: Position occupied!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python3.10/tkinter/__init__.py\", line 1921, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"/tmp/ipykernel_26646/35682596.py\", line 26, in <lambda>\n",
-      "    button = tk.Button(self, width=5, height=2, command=lambda r=row, c=col: self.on_button_click(r, c))\n",
-      "  File \"/tmp/ipykernel_26646/35682596.py\", line 66, in on_button_click\n",
-      "    self.computer_move()\n",
-      "  File \"/tmp/ipykernel_26646/35682596.py\", line 130, in computer_move\n",
-      "    piece, move = bestMove\n",
-      "TypeError: cannot unpack non-iterable NoneType object\n"
+      "\n",
+      "States Explored: 32791\n",
+      "\n",
+      "States Explored: 61294\n",
+      "\n",
+      "================================================================\n",
+      "\n"
      ]
     }
    ],
