added timer for the minimax algorithm, time that it takes to run gets printed

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,12 +468,17 @@
     "        thread.start()\n",
     "\n",
     "        try:\n",
-    "            _, bestMove = self.minimax(self.game, np.inf, np.NINF, np.inf, True)\n",
+    "            start_time = time.time()\n",
+    "            _, bestMove = self.minimax(self.game, 4, np.NINF, np.inf, True)\n",
+    "            end_time = time.time()\n",
+    "            elapsed_time = end_time - start_time\n",
+    "\n",
     "            piece, move = bestMove\n",
     "            self.game.move(piece, move)\n",
+    "\n",
     "            print(f\"States Explored: {self.states_explored}\\n\")\n",
+    "            print(f\"Time taken for the move: {elapsed_time:.4f} seconds\\n\")\n",
     "            print(\"================================================================\\n\")\n",
-    "            self.states_explored = 0\n",
     "        except MoveError as e:\n",
     "            print(f\"AI Move Error: {e}\")\n",
     "        finally:\n",
@@ -488,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -560,9 +565,9 @@
      "text": [
       "States Explored: 0\n",
       "\n",
-      "States Explored: 32791\n",
+      "States Explored: 13901\n",
       "\n",
-      "States Explored: 61294\n",
+      "Time taken for the move: 1.2856 seconds\n",
       "\n",
       "================================================================\n",
       "\n"
