changed prints slightly

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
     "            piece, move = bestMove\n",
     "            self.game.move(piece, move)\n",
     "\n",
-    "            print(f\"States Explored: {self.states_explored}\\n\")\n",
+    "            print(f\"States Explored Total: {self.states_explored}\\n\")\n",
     "            print(f\"Time taken for the move: {elapsed_time:.4f} seconds\\n\")\n",
     "            print(\"================================================================\\n\")\n",
     "        except MoveError as e:\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
     "    }\n",
     "    \n",
     "    piecesStart = 1 # which piece the first to move will have\n",
-    "    AIpieces = 1 # what piece does the AI have\n",
+    "    AIpieces = -1 # what piece does the AI have\n",
     "    root = tk.Tk()\n",
     "    app = GameApp(root, piecesStart, AIpieces, heuristic_weights)\n",
     "    root.mainloop()"
@@ -556,18 +556,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Movement Error: Invalid Piece to Move\n",
       "States Explored: 0\n",
       "\n",
-      "States Explored: 13901\n",
+      "States Explored Total: 11102\n",
       "\n",
-      "Time taken for the move: 1.2856 seconds\n",
+      "Time taken for the move: 1.0324 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 11102\n",
+      "\n",
+      "States Explored Total: 20709\n",
+      "\n",
+      "Time taken for the move: 0.8708 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 20709\n",
+      "\n",
+      "States Explored Total: 41948\n",
+      "\n",
+      "Time taken for the move: 1.8630 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 41948\n",
+      "\n",
+      "States Explored Total: 69841\n",
+      "States Explored: 69841\n",
+      "\n",
+      "\n",
+      "Time taken for the move: 2.4613 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 69841\n",
+      "\n",
+      "States Explored Total: 100399\n",
+      "States Explored: 100399\n",
+      "\n",
+      "\n",
+      "Time taken for the move: 2.6849 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 100399\n",
+      "\n",
+      "States Explored Total: 161679\n",
+      "\n",
+      "Time taken for the move: 5.4981 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "Movement Error: Invalid Position to move to\n",
+      "States Explored: 161679\n",
+      "\n",
+      "States Explored Total: 182194\n",
+      "\n",
+      "Time taken for the move: 1.8150 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 182194\n",
+      "\n",
+      "States Explored Total: 185274\n",
+      "\n",
+      "Time taken for the move: 0.2837 seconds\n",
+      "\n",
+      "================================================================\n",
+      "\n",
+      "States Explored: 185274\n",
+      "\n",
+      "States Explored Total: 220351\n",
+      "States Explored: 220351\n",
+      "\n",
+      "\n",
+      "Time taken for the move: 2.9367 seconds\n",
       "\n",
       "================================================================\n",
       "\n"
