added hash dict to prevent exploring repeat boards

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,11 +136,6 @@
     "    def evaluate_board(self, player, weights) : # evaluates the board and returns the heuristic for the current player\n",
     "        # the variables are the weights of each heuristic, 0 if heuristic is disabled\n",
     "        heuristic = 0\n",
-    "        missing_pieces_value = 0\n",
-    "        capturable_value = 0\n",
-    "        defended_value = 0\n",
-    "        flag_defense_value = 0\n",
-    "        flag_distance_to_edge_value = 0\n",
     "        \n",
     "        if player == 1 : # gold pieces\n",
     "            if self.gameState == 1 :\n",
@@ -183,7 +178,7 @@
     "        # print(f\"{player} - Flag Defense: {flag_defense_value}\")\n",
     "        # print(f\"{player} - Flag How Close to Edge: {flag_how_close_to_edge_value}\")\n",
     "        \n",
-    "        heuristic = missing_pieces_value + capturable_value + defended_value + flag_defense_value + flag_distance_to_edge_value\n",
+    "        heuristic = missing_pieces_value + capturable_value + defended_value + flag_defense_value + flag_how_close_to_edge_value\n",
     "        \n",
     "        return heuristic\n",
     "            \n",
@@ -320,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,8 +326,11 @@
     "import time\n",
     "\n",
     "class BattleScreen(tk.Frame):\n",
-    "    def __init__(self, root, controls, startPlayer, aiPlayer, heuristic_weights):\n",
+    "    def __init__(self, root, controls, startPlayer, aiPlayer, heuristic_weights, depth):\n",
     "        tk.Frame.__init__(self, root)\n",
+    "        self.depth = depth\n",
+    "        self.visited_dictionary = dict()\n",
+    "        self.dictionary_uses = 0\n",
     "        self.controls = controls\n",
     "        self.game = Game(startPlayer)\n",
     "        self.aiPlayer = aiPlayer\n",
@@ -413,11 +411,21 @@
     "        self.master.destroy() # close the game\n",
     "        \n",
     "    def minimax(self, game, depth, alpha, beta, maximizingPlayer): # TODO: It can happen where errors are thrown when there are no possible moves\n",
+    "        game_hash = hash(tuple(map(tuple, game.board)))\n",
+    "        if game_hash in self.visited_dictionary:\n",
+    "            evaluation, bestMove = self.visited_dictionary[game_hash]\n",
+    "            self.dictionary_uses += 1\n",
+    "            return evaluation, bestMove \n",
+    "        \n",
     "        if depth == 0 or game.gameState != 0:\n",
     "            self.states_explored += 1\n",
-    "            return game.evaluate_board(self.aiPlayer, self.heuristic_weights), None\n",
+    "\n",
+    "            evaluation = game.evaluate_board(self.aiPlayer, self.heuristic_weights)\n",
+    "            self.visited_dictionary[game_hash] = (evaluation, None)\n",
+    "            return evaluation, None\n",
     "\n",
     "        if maximizingPlayer:\n",
+    "            \n",
     "            maxEvaluation = np.NINF\n",
     "\n",
     "            possibleMoves = game.generate_all_moves(self.aiPlayer)\n",
@@ -425,7 +433,9 @@
     "            bestMove = possibleMoves[0] if possibleMoves else None\n",
     "\n",
     "            for move in possibleMoves:\n",
+    "                \n",
     "                child = game.copy_and_apply_move(move)\n",
+    "                \n",
     "                evaluation, _ = self.minimax(child, depth - 1, alpha, beta, False)\n",
     "\n",
     "                if evaluation > maxEvaluation:\n",
@@ -438,6 +448,9 @@
     "                    break\n",
     "                \n",
     "            self.states_explored += 1\n",
+    "            \n",
+    "            self.visited_dictionary[game_hash] = (maxEvaluation, bestMove)\n",
+    "            \n",
     "            return maxEvaluation, bestMove  # Return the best move and its evaluation at the root level\n",
     "\n",
     "        else:\n",
@@ -460,6 +473,9 @@
     "                if beta <= alpha :\n",
     "                    break\n",
     "            self.states_explored += 1\n",
+    "            \n",
+    "            self.visited_dictionary[game_hash] = (minEvaluation, bestMove)\n",
+    "            \n",
     "            return  minEvaluation, bestMove  # Return the best move and its evaluation at the root level\n",
     "        \n",
     "    def computer_move(self):\n",
@@ -469,16 +485,22 @@
     "\n",
     "        try:\n",
     "            start_time = time.time()\n",
-    "            _, bestMove = self.minimax(self.game, 4, np.NINF, np.inf, True)\n",
+    "            _, bestMove = self.minimax(self.game, self.depth, np.NINF, np.inf, True)\n",
     "            end_time = time.time()\n",
     "            elapsed_time = end_time - start_time\n",
     "\n",
     "            piece, move = bestMove\n",
     "            self.game.move(piece, move)\n",
-    "\n",
-    "            print(f\"States Explored Total: {self.states_explored}\\n\")\n",
+    "            \n",
+    "            print(\"================================================================\\n\")\n",
+    "            print(f\"States Explored Total: {self.states_explored}\")\n",
+    "            print(f\"Dictionary Uses: {self.dictionary_uses}\")\n",
+    "            print(f\"Dictionary Length: {len(self.visited_dictionary)}\")\n",
     "            print(f\"Time taken for the move: {elapsed_time:.4f} seconds\\n\")\n",
     "            print(\"================================================================\\n\")\n",
+    "            \n",
+    "            self.states_explored = 0\n",
+    "            self.dictionary_uses = 0\n",
     "        except MoveError as e:\n",
     "            print(f\"AI Move Error: {e}\")\n",
     "        finally:\n",
@@ -487,13 +509,13 @@
     "\n",
     "    def print_states_explored(self):\n",
     "        while not self.stop_thread_event.is_set():\n",
-    "            print(f\"States Explored: {self.states_explored}\\n\")\n",
+    "            print(f\"\\nStates Explored: {self.states_explored}\\nDictionary Uses: {self.dictionary_uses} \\nDictionary Length: {len(self.visited_dictionary)}\\n\")\n",
     "            time.sleep(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,18 +536,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "class GameApp:\n",
-    "    def __init__(self, root, startPlayer, AIpieces, heuristic_weights):\n",
+    "    def __init__(self, root, startPlayer, AIpieces, heuristic_weights, depth):\n",
     "        self.root = root\n",
     "        self.root.title(\"Breakthru\")\n",
     "\n",
     "        self.controls = Controls(self.root)\n",
     "        \n",
-    "        self.battle_screen = BattleScreen(self.root, self.controls, startPlayer, AIpieces, heuristic_weights)\n",
+    "        self.battle_screen = BattleScreen(self.root, self.controls, startPlayer, AIpieces, heuristic_weights, depth)\n",
     "        \n",
     "        self.battle_screen.pack()\n",
     "        self.controls.pack()"
@@ -533,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,97 +571,62 @@
     "    \n",
     "    piecesStart = 1 # which piece the first to move will have\n",
     "    AIpieces = -1 # what piece does the AI have\n",
+    "    depth = 6\n",
     "    root = tk.Tk()\n",
-    "    app = GameApp(root, piecesStart, AIpieces, heuristic_weights)\n",
+    "    app = GameApp(root, piecesStart, AIpieces, heuristic_weights, depth)\n",
     "    root.mainloop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Movement Error: Invalid Piece to Move\n",
+      "\n",
       "States Explored: 0\n",
-      "\n",
-      "States Explored Total: 11102\n",
-      "\n",
-      "Time taken for the move: 1.0324 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "States Explored: 11102\n",
-      "\n",
-      "States Explored Total: 20709\n",
-      "\n",
-      "Time taken for the move: 0.8708 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "States Explored: 20709\n",
-      "\n",
-      "States Explored Total: 41948\n",
-      "\n",
-      "Time taken for the move: 1.8630 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "States Explored: 41948\n",
-      "\n",
-      "States Explored Total: 69841\n",
-      "States Explored: 69841\n",
+      "Dictionary Uses: 0 \n",
+      "Dictionary Length: 0\n",
       "\n",
       "\n",
-      "Time taken for the move: 2.4613 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "States Explored: 69841\n",
-      "\n",
-      "States Explored Total: 100399\n",
-      "States Explored: 100399\n",
+      "States Explored: 69413\n",
+      "Dictionary Uses: 22442 \n",
+      "Dictionary Length: 69409\n",
       "\n",
       "\n",
-      "Time taken for the move: 2.6849 seconds\n",
+      "States Explored: 89146\n",
+      "Dictionary Uses: 29880 \n",
+      "Dictionary Length: 89141\n",
+      "\n",
+      "\n",
+      "States Explored: 157363\n",
+      "Dictionary Uses: 51353 \n",
+      "Dictionary Length: 157358\n",
+      "\n",
+      "\n",
+      "States Explored: 237139\n",
+      "Dictionary Uses: 77829 \n",
+      "Dictionary Length: 237134\n",
+      "\n",
+      "\n",
+      "States Explored: 252890\n",
+      "Dictionary Uses: 82775 \n",
+      "Dictionary Length: 252885\n",
+      "\n",
+      "\n",
+      "States Explored: 268841\n",
+      "Dictionary Uses: 88504 \n",
+      "Dictionary Length: 268836\n",
       "\n",
       "================================================================\n",
       "\n",
-      "States Explored: 100399\n",
-      "\n",
-      "States Explored Total: 161679\n",
-      "\n",
-      "Time taken for the move: 5.4981 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "Movement Error: Invalid Position to move to\n",
-      "States Explored: 161679\n",
-      "\n",
-      "States Explored Total: 182194\n",
-      "\n",
-      "Time taken for the move: 1.8150 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "States Explored: 182194\n",
-      "\n",
-      "States Explored Total: 185274\n",
-      "\n",
-      "Time taken for the move: 0.2837 seconds\n",
-      "\n",
-      "================================================================\n",
-      "\n",
-      "States Explored: 185274\n",
-      "\n",
-      "States Explored Total: 220351\n",
-      "States Explored: 220351\n",
-      "\n",
-      "\n",
-      "Time taken for the move: 2.9367 seconds\n",
+      "States Explored Total: 274369\n",
+      "Dictionary Uses: 89963\n",
+      "Dictionary Length: 274363\n",
+      "Time taken for the move: 37.4655 seconds\n",
       "\n",
       "================================================================\n",
       "\n"
