fixed error when all silver pieces were captured

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,10 @@
     "                        self.gameState = 1 #flag piece reached the border, gold won\n",
     "                \n",
     "                self.silverPieces.remove((new_x,new_y)) # silver piece was captured\n",
+    "                \n",
+    "                if len(self.silverPieces) == 0:\n",
+    "                    self.gameState = 1 # gold won by capturing all of silver's pieces\n",
+    "                    return True\n",
     "                \n",
     "            elif self.toMove == -1 and self.board[new_x][new_y] == 1 :\n",
     "                self.silverPieces.remove((old_x,old_y))\n",
@@ -312,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
